--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 psutil = "^5.9.8"
+watchdog = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
