feat: configure poetry package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,19 @@
 [tool.poetry]
 name = "steam-killer"
 version = "0.1.0"
-description = ""
+description = "Monitors for Steam and game processes and send SIGTERM/SIGKILL if conditions are met."
 authors = ["Daniel Souza <me@posix.dev.br>"]
+homepage = "https://github.com/danisztls/steam-killer"
 readme = "README.md"
+license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.11"
 psutil = "^5.9.8"
 watchdog = "^3.0.0"
+
+[tool.poetry.scripts]
+steam-killer = 'steam_killer:main'
 
 [build-system]
 requires = ["poetry-core"]
