--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = "GPLv3"
 python = "^3.11"
 psutil = "^5.9.8"
 watchdog = "^3.0.0"
+apscheduler = "^3.10.4"
 
 [tool.poetry.scripts]
 steam-killer = 'steam_killer:main'
